LASO Product Page

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -18,7 +18,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="og:title" content="Vicky W. | UX Designer | Design System">
   <meta property="og:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
   <meta property="og:url" content="https://vickywang.me/">
@@ -28,7 +28,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="twitter:title" content="Vicky W. | UX Designer | Design System">
   <meta property="twitter:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
