--- a/LASO/index.html
+++ b/LASO/index.html
@@ -26,7 +26,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  
 
 
 
@@ -60,7 +63,7 @@
   <header class="header">
     <div class="Grid Grid--full GreyBg100 headerBorder">
       <div class="Grid-cell u-textCenter">
-        <p> Call us now: <strong>866-527-6757</strong></p>
+        <h5> Call us now: <strong>866-527-6757</strong></h5>
       </div>
     </div>
     <div class="wrapper">
@@ -85,17 +88,118 @@
 
   <!-- header -->
 
-  <div class="Grid Grid--gutters Grid--cols-2 wrapper shadowBoxLt">
+  <div class="Grid Grid--gutters Grid--cols-2 wrapper shadowBoxLt WhiteBg borderRadiusM">
     <div class="Grid-cell">
       <div class="element">
-        <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
-        <h1> FDA-approved generics shipped to you for only $24.99 per month. </h1>
-        <button class="Button Secondary">Subscribe Now!</button>
-        <button class="Button Primary">Search Included Meds</button>
+        <div class="element">
+
+          <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
+          <h3> FDA-approved generics shipped to you for only $24.99 per month. </h3>
+          <button class="Button Secondary">Subscribe Now!</button>
+          <button class="Button Primary">Search Included Meds</button>
+        </div>
       </div>
     </div>
-    <div class="Grid-cell"> <img class=" widthM  " src="medsBottle.png" alt="Twitter"></div>
+    <div class="Grid-cell"> <img class=" widthM" src="medsBottle.png" alt="Twitter"></div>
   </div>
+  <div class="blankHXS"></div>
+
+
+  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
+
+    <div class="Grid-cell">
+      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_FDA.png" alt="Design">
+        <div class="column">
+          <h4><strong>FDA approved</strong></h4>
+          <h5>All of our generic medications are FDA approved and manufactured in FDA compliant facilities.</h5>
+        </div>
+      </h3>
+    </div>
+    <div class="Grid-cell">
+      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_Shipping.png" alt="Design">
+        <div class="column">
+          <h4><strong>Shipping and handling</strong></h4>
+          <h5>Your order shipping is free, fast, and tracking information is always included.</h5>
+        </div>
+      </h3>
+    </div>
+    <div class="Grid-cell">
+      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_PR.png" alt="Design">
+        <div class="column">
+          <h4><strong>Physician Recommended</strong></h4>
+          <h5>Nothing speaks louder than physicians recommending Rx Zero to their patients, friends, and family.</h5>
+        </div>
+      </h3>
+    </div>
+  </div>
+  <div class="blankHXS"></div>
+
+  <div class="Grid Grid--full  wrapper shadowBoxLt WhiteBg borderRadiusM">
+
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="element">
+
+          <h1 class="DisplayLarge Grey900 u-textCenter"> Over 600 Drugs Included</h1>
+
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="element">
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5><strong>Atorvastatin</strong></h5>
+              <h6>Cholesterol/Triglycerides</h6>
+              <h5><strong>Levothyroxine</strong></h5>
+              <h6>Thyroid</h6>
+            </div>
+            <div class="Grid-cell">
+              <h5><strong>Losartan</strong></h5>
+              <h6>Cardiac/Hypertension</h6>
+              <h5><strong>Metformin</strong></h5>
+              <h6>Diabetes </h6>
+            </div>
+            <div class="Grid-cell">
+              <h5><strong>Metoprolol</strong></h5>
+              <h6>Cardiac/Hypertension </h6>
+              <h5><strong>Amlodipine</strong></h5>
+              <h6>Cardiac/Hypertension </h6>
+            </div>
+            <div class="Grid-cell">
+              <h5><strong>Albuterol</strong></h5>
+              <h6>Asthma/Bronchodilators </h6>
+              <h5><strong>Omeprazole</strong></h5>
+              <h6>Gastrointestinal </h6>
+            </div>
+            <div class="Grid-cell">
+              <h5><strong>Hydrochlorothiazide</strong></h5>
+              <h6>Cardiac/Hypertension</h6>
+              <h5><strong>Sertraline</strong></h5>
+              <h6>Antidepressants</h6>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="Grid-cell u-textCenter">
+      <div class="element">
+        <div class="element">
+
+          <button class="Button Primary">Download PDF Formulary</button>
+
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+
+  </div>
+  <div class="blankHXS"></div>
+
 
 
 
@@ -139,44 +243,44 @@
       </div>
 
       <div class="element">
+        <div class="element">
 
-        <div class="Grid Grid--gutters">
+          <div class="Grid Grid--gutters">
 
 
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class=" widthXXS hoverGrey300  " src="AppStoreBadge.svg" alt="Twitter">
-          </a>
-          <div class="blankVerXS"></div>
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class=" widthXXXS hoverGrey300  " src="AppStoreBadge.svg" alt="Twitter">
+            </a>
+            <div class="blankVerXS"></div>
 
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class=" widthXXS hoverGrey300  " src="PlayStoreBadge.svg" alt="Instagram" title="Instagram">
-          </a>
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class=" widthXXXS hoverGrey300  " src="PlayStoreBadge.svg" alt="Instagram" title="Instagram">
+            </a>
 
+          </div>
         </div>
 
-
-        <div class="blankHXS"></div>
       </div>
       <div class="element">
         <div class="Grid Grid--gutters">
           <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="marginHS iconS hoverGrey300 paddingM borderRadiusMax" src="Facebook.svg" alt="Facebook"
+            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Facebook.svg" alt="Facebook"
               title="GitHub">
           </a>
 
           <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="marginHS iconS hoverGrey300 paddingM borderRadiusMax" src="Twitter.svg" alt="Twitter">
+            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Twitter.svg" alt="Twitter">
           </a>
 
           <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="marginHS iconS hoverGrey300 paddingM borderRadiusMax" src="Instagram.svg" alt="Instagram"
+            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Instagram.svg" alt="Instagram"
               title="Instagram">
           </a>
           <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="marginHS iconS hoverGrey300 paddingM borderRadiusMax" src="LinkedIn.svg" alt="LinkedIn">
+            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="LinkedIn.svg" alt="LinkedIn">
           </a>
           <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="marginHS iconS hoverGrey300 paddingM borderRadiusMax" src="YouTube.svg" alt="LinkedIn">
+            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="YouTube.svg" alt="LinkedIn">
           </a>
         </div>
         <h6>We're delivering on our mission by providing whole-person virtual care that includes primary care, mental
