--- a/about/index.html
+++ b/about/index.html
@@ -232,11 +232,18 @@
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconSearch.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Understanding &#38; Testing</strong> </h3>
+            <h4 data-aos="fade-up"> <strong> Prioritize Aligning User Needs with Business Goals</strong> </h4>
             <ul>
-              <li> The user needs is the foremost priority.</li>
-              <li> Assess the users' requirements and prevent prejudice.</li>
-              <li> Ensure the physical sequence is property transferred on digital screens.</li>
+              <li class="listCircle"> Conduct thorough user research to uncover what users truly need and value.</li>
+              <li class="listCircle"> Develop personas and user journeys that reflect the real users and their
+                interaction with the
+                product.</li>
+              <li class="listCircle"> Define clear business metrics that UX improvements should contribute towards, such
+                as increased user
+                retention or higher conversion rates.</li>
+              <li class="listCircle">Foster collaboration between UX designers, stakeholders, and business analysts to
+                ensure alignment on key objectives.
+              </li>
             </ul>
           </div>
         </div>
@@ -245,11 +252,20 @@
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconCategory.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Structure &#38; Prioritization</strong> </h3>
+            <h4 data-aos="fade-up"> <strong> Embrace Continuous Testing &#38; Diverse Solutions</strong> </h4>
             <ul>
-              <li>Structure the flow to support the core functions</li>
-              <li>Consider the overall information hierarchy and dependency </li>
-              <li>Minimize dependence and interdependence between elements whenever possible</li>
+              <li class="listCircle">Implement a structured user testing regimen that validates design hypotheses at
+                various stages of the product development.
+              </li>
+              <li class="listCircle">Encourage a design culture that is not wedded to a single solution but is open to
+                experimentation and diverse perspectives.
+              </li>
+              <li class="listCircle">Analyze test results and user feedback to inform the iteration of designs.
+              </li>
+              <li class="listCircle">Utilize A/B testing to compare different design solutions and understand their
+                impact on user behavior.
+              </li>
+
             </ul>
           </div>
         </div>
@@ -263,12 +279,21 @@
             <img class="iconS" src="iconBrush.svg" alt="se-arrow">
 
 
-            <h3 data-aos="fade-up"> <strong> Consistency &#38; Minimalism</strong> </h3>
+            <h4 data-aos="fade-up"> <strong> Distill Concepts into Clear &#38; Simplified Design </strong> </h4>
 
             <ul>
-              <li>Update and maintain the design system, eliminate redundancy.</li>
-              <li>Ensure that all elements of the user interface are consistent in terms of styling, placement, and
-                function. </li>
+              <li class="listCircle">Focus on the essential features that support user tasks, avoiding unnecessary
+                complexity.
+              </li>
+              <li class="listCircle">Use clear, consistent, and concise language in UI copy, labels, and instructions.
+              </li>
+              <li class="listCircle">Apply principles of visual hierarchy to guide users naturally through the flow of
+                the product.
+              </li>
+              <li class="listCircle">Simplify user paths to reduce the number of steps required to complete a task.
+              </li>
+
+
             </ul>
           </div>
         </div>
@@ -279,12 +304,18 @@
             <img class="iconS" src="IconDocument.svg" alt="se-arrow">
 
 
-            <h3 data-aos="fade-up"> <strong> Learning &#38; Improving</strong> </h3>
+            <h4 data-aos="fade-up"> <strong> Commit to Ongoing Learning &#38; Iterative Improvement</strong> </h4>
 
             <ul>
-              <li>Never stops learning, observing, or experimenting</li>
-              <li>
-                Developing expertise and refining design abilities by reflecting and engaging with it.</li>
+              <li class="listCircle">Stay updated with the latest UX trends, tools, and methodologies through continuous education and professional development.
+              </li>
+              <li class="listCircle">Regularly review and reassess existing user interfaces for opportunities to enhance usability and accessibility.
+              </li>
+              <li class="listCircle">Incorporate feedback loops with users, stakeholders, and team members to foster a culture of open communication and continuous refinement.
+              </li>
+              <li class="listCircle">Document lessons learned from each project to build a knowledge base for future reference and to avoid repeating past mistakes.
+              </li>
+
             </ul>
           </div>
         </div>
