--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3637,7 +3637,7 @@
                 <div class="blankHXS"></div>
 
               </div>
-              <button class="buttonTextOnly" onclick="toggleContent(this)">Read More &#8744;</button>
+              <button class="toggle buttonTextOnly">Read More &#8744;</button>
             </div>
           </div>
         </div>
