--- a/LASO/index.html
+++ b/LASO/index.html
@@ -28,8 +28,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+
 
 
 
@@ -87,21 +89,26 @@
   <div class="blankHM"></div>
 
   <!-- header -->
-
-  <div class="Grid Grid--gutters Grid--cols-2 wrapper shadowBoxLt WhiteBg borderRadiusM">
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="element">
-
-          <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
-          <h3> FDA-approved generics shipped to you for only $24.99 per month. </h3>
-          <button class="Button Secondary">Subscribe Now!</button>
-          <button class="Button Primary">Search Included Meds</button>
+        <div class="">
+          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg1">
+            <div class="element">
+              <div class="element">
+                <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
+                <h3> FDA-approved generics shipped to you for only $24.99 per month. </h3>
+                <button class="Button Secondary">Subscribe Now!</button>
+                <button class="Button Primary">Search Included Meds</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="Grid-cell"> <img class=" widthM" src="medsBottle.png" alt="Twitter"></div>
   </div>
+
+
   <div class="blankHXS"></div>
 
 
@@ -110,7 +117,7 @@
     <div class="Grid-cell">
       <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_FDA.png" alt="Design">
         <div class="column">
-          <h4><strong>FDA approved</strong></h4>
+          <h5><strong>FDA approved</strong></h5>
           <h5>All of our generic medications are FDA approved and manufactured in FDA compliant facilities.</h5>
         </div>
       </h3>
@@ -118,7 +125,7 @@
     <div class="Grid-cell">
       <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_Shipping.png" alt="Design">
         <div class="column">
-          <h4><strong>Shipping and handling</strong></h4>
+          <h5><strong>Shipping and handling</strong></h5>
           <h5>Your order shipping is free, fast, and tracking information is always included.</h5>
         </div>
       </h3>
@@ -126,78 +133,90 @@
     <div class="Grid-cell">
       <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_PR.png" alt="Design">
         <div class="column">
-          <h4><strong>Physician Recommended</strong></h4>
+          <h5><strong>Physician Recommended</strong></h5>
           <h5>Nothing speaks louder than physicians recommending Rx Zero to their patients, friends, and family.</h5>
         </div>
       </h3>
     </div>
   </div>
   <div class="blankHXS"></div>
-
-  <div class="Grid Grid--full  wrapper shadowBoxLt WhiteBg borderRadiusM">
-
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="element">
+        <div class="WhiteBg shadowBoxLt borderRadiusM ">
+          <div class="element">
+            <div class="element">
+              <div class="Grid-cell">
+                <h1 class="DisplayLarge Grey900 u-textCenter"> Over 600 Drugs Included</h1>
+              </div>
+              <div class="Grid Grid--gutters Grid--cols-6">
+                <div class="Grid-cell">
+                  <h5><strong>Atorvastatin</strong></h5>
+                  <h6>Cholesterol/Triglycerides</h6>
+                  <h5><strong>Levothyroxine</strong></h5>
+                  <h6>Thyroid</h6>
+                </div>
+                <div class="Grid-cell">
+                  <h5><strong>Losartan</strong></h5>
+                  <h6>Cardiac/Hypertension</h6>
+                  <h5><strong>Metformin</strong></h5>
+                  <h6>Diabetes </h6>
+                </div>
+                <div class="Grid-cell">
+                  <h5><strong>Metoprolol</strong></h5>
+                  <h6>Cardiac/Hypertension </h6>
+                  <h5><strong>Amlodipine</strong></h5>
+                  <h6>Cardiac/Hypertension </h6>
+                </div>
+                <div class="Grid-cell">
+                  <h5><strong>Albuterol</strong></h5>
+                  <h6>Asthma/Bronchodilators </h6>
+                  <h5><strong>Omeprazole</strong></h5>
+                  <h6>Gastrointestinal </h6>
+                </div>
+                <div class="Grid-cell">
+                  <h5><strong>Hydrochlorothiazide</strong></h5>
+                  <h6>Cardiac/Hypertension</h6>
+                  <h5><strong>Sertraline</strong></h5>
+                  <h6>Antidepressants</h6>
+                </div>
+              </div>
+              <div class="blankHXS"></div>
 
-          <h1 class="DisplayLarge Grey900 u-textCenter"> Over 600 Drugs Included</h1>
 
-        </div>
-      </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <div class="element">
-          <div class="Grid Grid--gutters Grid--cols-6">
-            <div class="Grid-cell">
-              <h5><strong>Atorvastatin</strong></h5>
-              <h6>Cholesterol/Triglycerides</h6>
-              <h5><strong>Levothyroxine</strong></h5>
-              <h6>Thyroid</h6>
-            </div>
-            <div class="Grid-cell">
-              <h5><strong>Losartan</strong></h5>
-              <h6>Cardiac/Hypertension</h6>
-              <h5><strong>Metformin</strong></h5>
-              <h6>Diabetes </h6>
-            </div>
-            <div class="Grid-cell">
-              <h5><strong>Metoprolol</strong></h5>
-              <h6>Cardiac/Hypertension </h6>
-              <h5><strong>Amlodipine</strong></h5>
-              <h6>Cardiac/Hypertension </h6>
-            </div>
-            <div class="Grid-cell">
-              <h5><strong>Albuterol</strong></h5>
-              <h6>Asthma/Bronchodilators </h6>
-              <h5><strong>Omeprazole</strong></h5>
-              <h6>Gastrointestinal </h6>
-            </div>
-            <div class="Grid-cell">
-              <h5><strong>Hydrochlorothiazide</strong></h5>
-              <h6>Cardiac/Hypertension</h6>
-              <h5><strong>Sertraline</strong></h5>
-              <h6>Antidepressants</h6>
-            </div>
+              <div class="Grid-cell u-textCenter">
+                <button class="Button Primary">Download PDF Formulary</button>
+              </div>
 
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="blankHXS"></div>
 
-    <div class="Grid-cell u-textCenter">
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
       <div class="element">
-        <div class="element">
+        <div class="">
+          <div class="shadowBoxLt borderRadiusM LASOBlueBg">
+            <div class="element ">
+              <div class="element Grey100 BgImg2">
+                <h1 class="DisplayLarge widthXS"> Satisfaction. Guaranteed.</h1>
+                <h3 class="widthMPhHalf"> If you don't absolutely love our service (for any reason), you can cancel your membership within 30
+                  days and we'll give you a full refund. </h3>
 
-          <button class="Button Primary">Download PDF Formulary</button>
-
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="blankHS"></div>
-
   </div>
+
+
   <div class="blankHXS"></div>
 
 
@@ -207,16 +226,153 @@
 
 
 
+  <div class="wrapper">
+    <div class="Grid Grid--full u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of1"></div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of2"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of2"></div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of3"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of3"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of4"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of4"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of4"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of4"></div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
+
+
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of8"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
   <div class="blankHL"></div>
 
 
 
-  <div class="blankHL"></div>
-  <div class="blankHL"></div>
-  <div class="blankHL"></div>
-  <div class="blankHL"></div>
-  <div class="blankHL"></div>
-  <div class="blankHL"></div>
+
 
 
 
