--- a/LASO/index.html
+++ b/LASO/index.html
@@ -93,11 +93,11 @@
     <div class="Grid-cell">
       <div class="element">
         <div class="">
-          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg1">
+          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg1 centerVer">
             <div class="element">
               <div class="element">
                 <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
-                <h3> FDA-approved generics shipped to you for only $24.99 per month. </h3>
+                <h2 class="Grey700 widthMPhHalf"> FDA-approved generics shipped to you for only $24.99 per month. </h2>
                 <button class="Button Secondary">Subscribe Now!</button>
                 <button class="Button Primary">Search Included Meds</button>
               </div>
@@ -147,7 +147,7 @@
           <div class="element">
             <div class="element">
               <div class="Grid-cell">
-                <h1 class="DisplayLarge Grey900 u-textCenter"> Over 600 Drugs Included</h1>
+                <h1 class="DisplaySmall Grey900 u-textCenter"> Over 600 Drugs Included</h1>
               </div>
               <div class="Grid Grid--gutters Grid--cols-6">
                 <div class="Grid-cell">
@@ -200,13 +200,39 @@
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
+        <div class="shadowBoxLt borderRadiusM LASOBlueBg">
+          <div class="element">
+            <div class="element Grey100 BgImg2">
+              <h1 class="DisplayLarge widthXS"> Satisfaction. Guaranteed.</h1>
+              <h3 class="widthMPhHalf"> If you don't absolutely love our service (for any reason), you can cancel your
+                membership within 30 days and we'll give you a full refund. </h3>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="blankHXS"></div>
+
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class="element">
         <div class="">
-          <div class="shadowBoxLt borderRadiusM LASOBlueBg">
-            <div class="element ">
-              <div class="element Grey100 BgImg2">
-                <h1 class="DisplayLarge widthXS"> Satisfaction. Guaranteed.</h1>
-                <h3 class="widthMPhHalf"> If you don't absolutely love our service (for any reason), you can cancel your membership within 30
-                  days and we'll give you a full refund. </h3>
+          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg3 centerVer">
+            <div class="element">
+              <div class="element">
+                <h5 class="widthMPhHalf"> I see thousands of patients every year. For many of them, the time and cost of
+                  keeping up with
+                  their medications is a huge burden. This has deeply bothered me for a very long time so I had to do
+                  something about it. We used our knowledge of the generic medication industry and worked with some
+                  great partners to come up with a simple solution that saves patients a ton of time and money. I love
+                  it and recommend it to all my patients, friends, and family. Now, I want to share it with everyone.
+                </h5>
+                <h4><strong>Dr. H. Mizani, MD</strong></h4>
+                <h4>Founder, LASO Health</h4>
 
               </div>
             </div>
@@ -220,11 +246,114 @@
   <div class="blankHXS"></div>
 
 
+  <div class="Grid Grid--gutters Grid--cols-3 wrapper u-textCenter">
+
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <img class="iconXL paddingM" src="iconS_ship.png" alt="Design">
+          <h5><strong>Free fast shipping</strong></h5>
+          <h5>Fast shipping (via USPS) is included in the price of your membership.</h5>
+          <div class="blankHXS"></div>
+
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+
+        <div class="element LASOBlueBg Grey100 borderRadiusM">
+
+          <img class="iconXL paddingM" src="iconS_chat1.png" alt="Design">
+          <h5><strong>REFILlS BY TEXT</strong></h5>
+          <h5>Just reply to our text message to get your refill delivered on time.</h5>
+          <div class="blankHXS"></div>
+
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+
+        <div class="element LASOBlueBg Grey100 borderRadiusM">
+
+          <img class="iconXL paddingM" src="iconS_chat.png" alt="Design">
+          <h5><strong>Friendly support</strong></h5>
+          <h5>We're here to help transfer your prescriptions and answer any questions.</h5>
+          <div class="blankHXS"></div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHXS"></div>
+
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="WhiteBg shadowBoxLt borderRadiusM ">
+          <div class="element">
+            <div class="element">
+              <div class="Grid-cell">
+                <h4 class=" Grey900 u-textCenter styleCap"> RX ZERO MEMBERSHIP</h4>
+
+                <h1 class="DisplaySmall Grey900 u-textCenter"> How it works</h1>
+              </div>
+              <div class="Grid Grid--gutters Grid--cols-2 ">
+
+                <div class="Grid-cell">
+                  <h3 class="centerVer"> <img class="iconXL paddingM" src="iconS_1.svg" alt="Design">
+                    <div class="column">
+                      <h5><strong>Sign Up.</strong></h5>
+                      <h5>Our all inclusive Rx Zero membership is only $24.99 per month.  Cancel anytime.</h5>
+                    </div>
+                  </h3>
+                </div>
+                <div class="Grid-cell">
+                  <h3 class="centerVer"> <img class="iconXL paddingM" src="iconS_2.svg" alt="Design">
+                    <div class="column">
+                      <h5><strong>Transfer Your Prescriptions</strong></h5>
+                      <h5>Share your prescription information with us and we'll coordinate with your existing pharmacy or physician.</h5>
+                    </div>
+                  </h3>
+                </div>
+            
+              </div>
+              <div class="Grid Grid--gutters Grid--cols-2 ">
+
+                <div class="Grid-cell">
+                  <h3 class="centerVer"> <img class="iconXL paddingM" src="iconS_3.svg" alt="Design">
+                    <div class="column">
+                      <h5><strong>Medications Delivered to Your Door.</strong></h5>
+                      <h5>Once your medications transfer, we promptly ship your meds from one of our 3 US centers.</h5>
+                    </div>
+                  </h3>
+                </div>
+                <div class="Grid-cell">
+                  <h3 class="centerVer"> <img class="iconXL paddingM" src="iconS_4.svg" alt="Design">
+                    <div class="column">
+                      <h5><strong>Approve Refills by Text.</strong></h5>
+                      <h5>When it's time for a refill, we'll send you a text reminder.  Just reply 'Yes' and we'll handle the rest.</h5>
+                    </div>
+                  </h3>
+                </div>
+            
+              </div>
+              <div class="blankHXS"></div>
 
 
+   
 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-
+  <div class="Grid-cell u-textCenter">
+    <button class="Button Primary">Subscribe now</button>
+  </div>
 
   <div class="wrapper">
     <div class="Grid Grid--full u-textCenter">
