--- a/LASO/index.html
+++ b/LASO/index.html
@@ -405,9 +405,10 @@
         <div class="blankHXS"></div>
       </div>
 
-      
 
-      <h3 class="accordion noMargin WhiteBg"><strong class="Grey800">How long will it take for me to receive my order?</strong> </h3>
+
+      <h3 class="accordion noMargin WhiteBg"><strong class="Grey800">How long will it take for me to receive my
+          order?</strong> </h3>
       <div class="accordion-content">
         <div class="blankHXS"></div>
 
@@ -415,7 +416,8 @@
         <div class="blankHXS"></div>
       </div>
 
-      <h3 class="accordion accordionBorderBottom noMargin WhiteBg"><strong class="Grey800">Is tracking information available?</strong> </h3>
+      <h3 class="accordion accordionBorderBottom noMargin WhiteBg"><strong class="Grey800">Is tracking information
+          available?</strong> </h3>
 
       <div class="accordion-content">
         <div class="blankHXS"></div>
@@ -455,55 +457,45 @@
 
   <div class="Grid Grid--gutters Grid--1of3 wrapper">
     <div class="Grid-cell">
-      <div class="element">
-        <h5> <strong class="styleCap"> Connect with us </strong> </h5>
-      </div>
+
 
       <div class="element">
         <div class="element">
-
+          <h5> <strong class="styleCap"> Connect with us </strong> </h5>
+        </div>
+        <div class="element">
           <div class="Grid Grid--gutters">
-
-
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
               <img class=" widthXXXS hoverGrey300  " src="AppStoreBadge.svg" alt="Twitter">
             </a>
             <div class="blankVerXS"></div>
-
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
               <img class=" widthXXXS hoverGrey300  " src="PlayStoreBadge.svg" alt="Instagram" title="Instagram">
             </a>
-
           </div>
         </div>
-
-      </div>
-      <div class="element">
         <div class="Grid Grid--gutters">
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Facebook.svg" alt="Facebook"
-              title="GitHub">
+          <a target="_blank" href="/">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="Facebook.svg" alt="Facebook"
+              title="Facebook">
+          </a>
+          <a target="_blank" href="/" title="Twitter">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="Twitter.svg" alt="Twitter">
           </a>
 
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Twitter.svg" alt="Twitter">
-          </a>
-
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="Instagram.svg" alt="Instagram"
+          <a target="_blank" href="/">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="Instagram.svg" alt="Instagram"
               title="Instagram">
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="LinkedIn.svg" alt="LinkedIn">
+          <a target="_blank" href="/" title="LinkedIn">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="LinkedIn.svg" alt="LinkedIn">
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="marginHS iconS hoverGrey300 paddingS borderRadiusMax" src="YouTube.svg" alt="LinkedIn">
+          <a target="_blank" href="/" title="YouTube">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="YouTube.svg" alt="YouTube">
           </a>
         </div>
         <h6>We're delivering on our mission by providing whole-person virtual care that includes primary care, mental
           health, chronic condition management and more.</h6>
-
-        <div class="blankHXS"></div>
       </div>
     </div>
     <div class="Grid-cell">
