--- a/LASO/index.html
+++ b/LASO/index.html
@@ -78,9 +78,8 @@
         <li><a href="#careers">RX Local</a></li>
         <li><a href="#contact">For Employers</a></li>
         <li><a href="#work">For Brokers</a></li>
-        <div class="rowVW">
+        <div class="rowChng">
           <li> <button class="Button Secondary">Sign in</button></li>
-
           <li> <button class="Button Primary">Sign up!</button></li>
         </div>
       </ul>
@@ -93,7 +92,7 @@
     <div class="Grid-cell">
       <div class="element">
         <div class="">
-          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg1 centerVer">
+          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg_MedBottle centerVer">
             <div class="element">
               <div class="element">
                 <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
@@ -202,8 +201,8 @@
       <div class="element">
         <div class="shadowBoxLt borderRadiusM LASOBlueBg">
           <div class="element">
-            <div class="element Grey100 BgImg2">
-              <h1 class="DisplayLarge widthXS"> Satisfaction. Guaranteed.</h1>
+            <div class="element Grey100 BgImg_30Days">
+              <h1 class="DisplayLarge widthMPhHalf"> Satisfaction. Guaranteed.</h1>
               <h3 class="widthMPhHalf"> If you don't absolutely love our service (for any reason), you can cancel your
                 membership within 30 days and we'll give you a full refund. </h3>
 
@@ -217,32 +216,33 @@
 
   <div class="blankHXS"></div>
 
+
+
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="">
-          <div class="WhiteBg shadowBoxLt borderRadiusM BgImg3 centerVer">
+          <div class="WhiteBg shadowBoxLt borderRadiusM BgImgDrM ">
             <div class="element">
               <div class="element">
-                <h5 class="widthMPhHalf"> I see thousands of patients every year. For many of them, the time and cost of
+                <div class="blankHXS"></div>
+
+                <h4 class="widthMPhHalf"> I see thousands of patients every year. For many of them, the time and cost of
                   keeping up with
                   their medications is a huge burden. This has deeply bothered me for a very long time so I had to do
                   something about it. We used our knowledge of the generic medication industry and worked with some
                   great partners to come up with a simple solution that saves patients a ton of time and money. I love
                   it and recommend it to all my patients, friends, and family. Now, I want to share it with everyone.
-                </h5>
+                </h4>
+                <div class="blankHXS"></div>
+  
                 <h4><strong>Dr. H. Mizani, MD</strong></h4>
                 <h4>Founder, LASO Health</h4>
-
               </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
   <div class="blankHXS"></div>
 
 
@@ -476,16 +476,14 @@
         </div>
         <div class="Grid Grid--gutters">
           <a target="_blank" href="/">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="Facebook.svg" alt="Facebook"
-              title="Facebook">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="Facebook.svg" alt="Facebook" title="Facebook">
           </a>
           <a target="_blank" href="/" title="Twitter">
             <img class="marginXS iconM hoverGrey300 paddingS " src="Twitter.svg" alt="Twitter">
           </a>
 
           <a target="_blank" href="/">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="Instagram.svg" alt="Instagram"
-              title="Instagram">
+            <img class="marginXS iconM hoverGrey300 paddingS " src="Instagram.svg" alt="Instagram" title="Instagram">
           </a>
           <a target="_blank" href="/" title="LinkedIn">
             <img class="marginXS iconM hoverGrey300 paddingS " src="LinkedIn.svg" alt="LinkedIn">
