--- a/LASO/index.html
+++ b/LASO/index.html
@@ -73,19 +73,21 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="#work">RX Zero</a></li>
-        <li><a href="#about">Telemedicine</a></li>
-        <li><a href="#careers">RX Local</a></li>
-        <li><a href="#contact">For Employers</a></li>
-        <li><a href="#work">For Brokers</a></li>
-        <div class="rowChng">
-          <li> <button class="Button Secondary">Sign in</button></li>
-          <li> <button class="Button Primary">Sign up!</button></li>
+        <li><a href="/" class="active">RX Zero</a></li>
+        <li><a href="/" class="inactive">Telemedicine</a></li>
+        <li><a href="/" class="inactive">RX Local</a></li>
+        <li><a href="/" class="inactive">For Employers</a></li>
+        <li><a href="/" class="inactive">For Brokers</a></li>
+
+
+        <div class="BtnsBox4Header ">
+          <li> <button class="Button Secondary ">Sign in</button></li>
+          <li> <button class="Button Primary ">Sign up!</button></li>
         </div>
       </ul>
     </div>
   </header>
-  <div class="blankHM"></div>
+  <div class="blankHS"></div>
 
   <!-- header -->
   <div class="Grid Grid--full wrapper">
